--- a/styles.css
+++ b/styles.css
@@ -88,4 +88,8 @@ button:hover{
         font-size: 16px; 
         padding: 10px; 
     }
+    table {
+        width: 90%; 
+        margin: 0 auto;
+    }
 }
